--- a/support.html
+++ b/support.html
@@ -133,7 +133,7 @@
         <h2><span>Servicios</span> Model Bolivia SA</h2>
         <p>Nuestros servicios  y productos, a traves del tiempo hemos y estamos usando diferentes diferentes estrategias que han llegado al mercado con buen impacto revolucionando el mundo de la moda y el modelaje, nos destacamos por brindarte una experiencia unica, gracias por visitarnos. </p>
         <ul class="fbg_ul">
-          <li><a href="#">Model Bolivia SA Srervicios Comerciales </a></li>
+          <li><a href="#">Model Bolivia SA Servicios Comerciales </a></li>
           <li><a href="#">Model Bolivia SA Productos de Embellecimiento</a></li>
           <li><a href="#">Model Bolivia SA System Mercantil Electronics </a></li>
         </ul>
