--- a/support.html
+++ b/support.html
@@ -16,7 +16,7 @@
   <div class="header">
     <div class="header_resize">
       <div class="logo">
-        <h1><a href="index.html"><span>Model Bollivia SA</span> <small>Agencia de Modelos</small></a></h1>
+        <h1><a href="index.html"><span>Castings y Audiciones</span> <small>Model Bolivia SA - Agencia de Modelos </small></a></h1>
       </div>
       <div class="menu_nav">
         <ul>
