--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div class="header_resize">
       <div class="logo">
         <h1><a href="index.html"><span>Castings y Audiciones</span> <small>Model Bolivia SA - Agencia de Modelos </small></a></h1> 
+        <div>
+        </div>
         <h1><a href="index.html"><span>Model Bolivia SA</span> <small>Agencia de Modelos </small></a></h1>
       </div>
       <div class="menu_nav">
