--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Model Bolivia SA | Audiciones y Castings</title>
+<title>Audiciones y Castings  | Model Bolivia SA</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="css/coin-slider.css" />
@@ -16,9 +16,6 @@
   <div class="header">
     <div class="header_resize">
       <div class="logo">
-        <h1><a href="index.html"><span>Castings y Audiciones</span> <small>Model Bolivia SA - Agencia de Modelos </small></a></h1> 
-        <div>
-        </div>
         <h1><a href="index.html"><span>Model Bolivia SA</span> <small>Agencia de Modelos </small></a></h1>
       </div>
       <div class="menu_nav">
