--- a/support.html
+++ b/support.html
@@ -20,11 +20,11 @@
       </div>
       <div class="menu_nav">
         <ul>
-          <li><a href="index.html"><span>Principal</span></a></li>
-          <li class="active"><a href="support.html"><span>Administracion</span></a></li>
-          <li><a href="about.html"><span>Nosotros</span></a></li>
-          <li><a href="blog.html"><span>Modelos</span></a></li>
-          <li><a href="contact.html"><span>Contacto</span></a></li>
+          <li class="active"><a href="https://modelbolivia.github.io/administracion/index.html"><span>Principal</span></a></li>
+          <li><a href="https://modelbolivia.github.io/administracion/support.html"><span>Administracion</span></a></li>
+          <li><a href="https://modelbolivia.github.io/administracion/about.html"><span>Nosotros</span></a></li>
+          <li><a href="https://modelbolivia.github.io/administracion/blog.html"><span>Modelos</span></a></li>
+          <li><a href="https://modelbolivia.github.io/administracion/contact.html"><span>Contacto</span></a></li>
         </ul>
       </div>
       <div class="clr"></div>
