--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,15 @@
 <body>
 <div class="main">
   <div class="header">
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-28MJ0V5HPY"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-28MJ0V5HPY');
+      </script>
     <div class="header_resize">
       <div class="logo">
         <h1><a href="index.html"><span>Model Bolivia SA</span> <small>Agencia de Modelos </small></a></h1>
