--- a/about.html
+++ b/about.html
@@ -23,6 +23,14 @@
     
       gtag('config', 'G-28MJ0V5HPY');
       </script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10876896547"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-10876896547');
+      </script>
     <div class="header_resize">
       <meta name="google-site-verification" content="yPRK277VYBwzHnIq4C2jTMKPIP1B0LnS3Npsf1-2IC0" />
       <div class="logo">
