--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
         <a href="#"><img src="images/0321-01_1711037522542.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/Purple Lined Geometric Cargo Logistic Services Poster.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/Shampoo Aclarador.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/0225-01_1708895153539.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/Post de Facebook Creadora de Contenido Moderno Verde .jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/modelaje para eventos .jpg" width="75" height="75" alt="" class="gal" /></a> </div>
       <div class="col c2">
         <h2><span>Servicios</span> Model Bolivia SA</h2>
-        <p>Nuestros servicios  y productos, a traves del tiempo hemos y estamos usando diferentes diferentes estrategias que han llegado al mercado con buen impacto revolucionando el mundo de la moda y el modelaje, nos destacamos por brindarte una experiencia unica, gracias por visitarnos. </p>
+        <p>Nuestros servicios  y productos, a traves del tiempo hemos y estamos usando diferentes estrategias que han llegado al mercado con buen impacto revolucionando el mundo de la moda y el modelaje, nos destacamos por brindarte una experiencia unica, gracias por visitarnos. </p>
         <ul class="fbg_ul">
           <li><a href="#">Model Bolivia SA Servicios Comerciales </a></li>
           <li><a href="#">Model Bolivia SA Productos de Embellecimiento</a></li>
