--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     gtag('js', new Date());
 
     gtag('config', 'AW-10876896547');
+
+    <meta name="msvalidate.01" content="770BC3890CC708D87FCE52FFE3A7DDDA" />
     </script>
     <div class="header_resize">
       <meta name="google-site-verification" content="yPRK277VYBwzHnIq4C2jTMKPIP1B0LnS3Npsf1-2IC0" />
