--- a/support.html
+++ b/support.html
@@ -31,7 +31,7 @@
 
       gtag('config', 'AW-10876896547');
       </script>
-
+      <meta name="msvalidate.01" content="770BC3890CC708D87FCE52FFE3A7DDDA" />
     <div class="header_resize">
       <meta name="google-site-verification" content="yPRK277VYBwzHnIq4C2jTMKPIP1B0LnS3Npsf1-2IC0" />
       <div class="logo">
